--- a/package.json
+++ b/package.json
@@ -12,24 +12,28 @@
     "devDependencies": {
         "@types/velocity-animate": "^1.2.33",
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.2.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^4.0.14",
         "lodash": "^4.17.5",
-        "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "popper.js": "^1.14.6",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
+        "vue": "^2.5.22"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.4.0",
-        "bootstrap-select": "^1.13.2",
+        "@fortawesome/fontawesome-free": "^5.6.3",
+        "bootstrap-select": "^1.13.5",
         "bootstrap-vue": "^2.0.0-rc.11",
-        "bootswatch": "^4.1.3",
+        "bootswatch": "^4.2.1",
         "jquery-ui": "^1.12.1",
-        "laravel-echo": "^1.4.0",
+        "laravel-echo": "^1.5.2",
         "pusher-js": "^4.3.1",
+        "qs": "^6.6.0",
         "toaster": "^0.1.2",
         "velocity-animate": "^1.5.2",
-        "vuex": "^3.0.1"
+        "vuex": "^3.1.0",
+        "vuex-map-fields": "^1.3.1"
     }
 }
