--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,10 @@
 {
-    "/js/leadQuestionsForm.js": "/js/leadQuestionsForm.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/js/bs4navbar.js": "/js/bs4navbar.js",
+    "/js/configs.js": "/js/configs.js",
+    "/js/leadQuestionsForm.js": "/js/leadQuestionsForm.js",
     "/js/multiQuestionsForm.js": "/js/multiQuestionsForm.js",
     "/js/questions.js": "/js/questions.js",
-    "/js/configs.js": "/js/configs.js",
-    "/js/bs4navbar.js": "/js/bs4navbar.js"
+    "/js/quiz.js": "/js/quiz.js"
 }
