--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "qs": "^6.6.0",
         "toaster": "^0.1.2",
         "velocity-animate": "^1.5.2",
+        "vue-scrollto": "^2.13.0",
         "vuex": "^3.1.0",
         "vuex-map-fields": "^1.3.1"
     }
