--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/css/app.css": "/css/app.css",
     "/js/bs4navbar.js": "/js/bs4navbar.js",
     "/js/configs.js": "/js/configs.js",
+    "/js/crudQuestions.js": "/js/crudQuestions.js",
     "/js/leadQuestionsForm.js": "/js/leadQuestionsForm.js",
     "/js/multiQuestionsForm.js": "/js/multiQuestionsForm.js",
     "/js/questions.js": "/js/questions.js",
