--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "@types/velocity-animate": "^1.2.33",
-        "axios": "^0.18",
-        "bootstrap": "^4.2.1",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.14",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.14.6",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.5.22"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.6.3",
-        "bootstrap-select": "^1.13.5",
-        "bootstrap-vue": "^2.0.0-rc.11",
-        "bootswatch": "^4.2.1",
-        "jquery-ui": "^1.12.1",
-        "laravel-echo": "^1.5.2",
-        "pusher-js": "^4.3.1",
-        "qs": "^6.6.0",
-        "toaster": "^0.1.2",
-        "velocity-animate": "^1.5.2",
-        "vue-scrollto": "^2.13.0",
-        "vuex": "^3.1.0",
-        "vuex-map-fields": "^1.3.1"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "@types/velocity-animate": "^1.2.33",
+    "axios": "^0.18",
+    "bootstrap": "^4.2.1",
+    "cross-env": "^5.1",
+    "jquery": "^3.2",
+    "laravel-mix": "^4.0.14",
+    "lodash": "^4.17.5",
+    "popper.js": "^1.14.6",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.5.22",
+    "vue-template-compiler": "^2.6.6"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "bootstrap-select": "^1.13.5",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "bootswatch": "^4.2.1",
+    "jquery-ui": "^1.12.1",
+    "laravel-echo": "^1.5.2",
+    "pusher-js": "^4.3.1",
+    "qs": "^6.6.0",
+    "toaster": "^0.1.2",
+    "velocity-animate": "^1.5.2",
+    "vue-scrollto": "^2.13.0",
+    "vuex": "^3.1.0",
+    "vuex-map-fields": "^1.3.1"
+  }
 }
