--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,5 +6,6 @@
     "/js/crudQuestions.js": "/js/crudQuestions.js",
     "/js/leadQuestionsForm.js": "/js/leadQuestionsForm.js",
     "/js/multiQuestionsForm.js": "/js/multiQuestionsForm.js",
-    "/js/questions.js": "/js/questions.js"
+    "/js/questions.js": "/js/questions.js",
+    "/js/quiz.js": "/js/quiz.js"
 }
