--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
-        "kalnoy/nestedset": "^4.3.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "kalnoy/nestedset": "^4.3.3",
         "pusher/pusher-php-server": "~3.0",
         "santigarcor/laratrust": "5.0.*",
         "twilio/sdk": "^5.24",
@@ -23,7 +23,8 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "predis/predis": "^1.1"
     },
     "autoload": {
         "classmap": [
