--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pusher-js": "^4.4.0",
     "qs": "^6.7.0",
     "toaster": "^0.1.2",
+    "twilio-client": "^1.6.10",
     "vee-validate": "^2.2.0",
     "velocity-animate": "^1.5.2",
     "vue-scrollto": "^2.15.0",
